Раздел новостей показывать списком

--- a/public/500.html
+++ b/public/500.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html>
 <head>
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+  </head>
+
+
   <title>We're sorry, but something went wrong (500)</title>
   <style>
   body {
@@ -51,6 +58,8 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <h1>We're sorry, but something went wrong.</h1>
+    <h2><a href ="\">Вернуться на главную страницу</a></h2>
+
   </div>
   <p>If you are the application owner check the logs for more information.</p>
 </body>
